--- a/CodeKeep/CodeKeep.csproj
+++ b/CodeKeep/CodeKeep.csproj
@@ -68,8 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Administracion.aspx" />
+    <Content Include="Consulta.aspx" />
     <Content Include="HomePage.html" />
-    <Content Include="IncioSesion.aspx" />
+    <Content Include="InicioSesion.aspx" />
     <Content Include="RecuperarCuenta.aspx" />
     <Content Include="RegistroCuenta.aspx" />
     <Content Include="Style.css" />
@@ -86,12 +87,19 @@
       <DependentUpon>Administracion.aspx</DependentUpon>
     </Compile>
     <Compile Include="ConexionDB.cs" />
-    <Compile Include="IncioSesion.aspx.cs">
-      <DependentUpon>IncioSesion.aspx</DependentUpon>
+    <Compile Include="Consulta.aspx.cs">
+      <DependentUpon>Consulta.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="IncioSesion.aspx.designer.cs">
-      <DependentUpon>IncioSesion.aspx</DependentUpon>
+    <Compile Include="Consulta.aspx.designer.cs">
+      <DependentUpon>Consulta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="InicioSesion.aspx.cs">
+      <DependentUpon>InicioSesion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="InicioSesion.aspx.designer.cs">
+      <DependentUpon>InicioSesion.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecuperarCuenta.aspx.cs">
