Darle funcionalidad al botón de insertar información a los catálogos e implementar la funcionalidad en las nuevas ventanas.

--- a/CodeKeep/CodeKeep.csproj
+++ b/CodeKeep/CodeKeep.csproj
@@ -71,6 +71,7 @@
     <Content Include="Consulta.aspx" />
     <Content Include="HomePage.html" />
     <Content Include="InicioSesion.aspx" />
+    <Content Include="InsertarInfoAdmi.aspx" />
     <Content Include="RecuperarCuenta.aspx" />
     <Content Include="RegistroCuenta.aspx" />
     <Content Include="Reportes.aspx" />
@@ -101,6 +102,13 @@
     </Compile>
     <Compile Include="InicioSesion.aspx.designer.cs">
       <DependentUpon>InicioSesion.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="InsertarInfoAdmi.aspx.cs">
+      <DependentUpon>InsertarInfoAdmi.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="InsertarInfoAdmi.aspx.designer.cs">
+      <DependentUpon>InsertarInfoAdmi.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecuperarCuenta.aspx.cs">
